# brainsbot

./: .dockerignore  .gitignore  Dockerfile  Makefile  amnezia_sites.json  docker-compose.yml  pyproject.toml
app/: entities.py  messages.py  settings.py
app/adapters/postgresql/: models.py  registry.py  repositories.py
app/adapters/protocols/: factory.py
app/adapters/protocols/wireguard/: manager.py  templates.py
app/adapters/protocols/xray/: manager.py  templates.py
app/adapters/wireguard/: async_manager.py  sync_manager.py
app/adapters/xui/: client.py
app/handlers/: main.py
app/handlers/telegram/: __init__.py  deps.py  user.py
app/tasks/: subscriptions.py
app/usecases/: user.py
migrations/: env.py
migrations/versions/: 1c060216d2b2_init.py  25fbef818679_init.py  49191375baa3_init.py  567e7a90790e_new_field.py  bf4b06615148_add_new_field.py  db011118b445_init.py
