[project]
name = "brainsbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0.post0",
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "asyncssh>=2.17.0",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.41",
    "vi-core",
    "wgconfig>=1.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.11",
]

[tool.ruff]
line-length = 120

lint.ignore = [
  "E712",   # available var == False/True, required for sqlalchemy
  "E711",   # available var == None, required for sqlalchemy
  "RET503", # dont require return None in the functions
  "N818",   # don't require to name Exceptions with suffix Error
  "SIM102"  # available to make nested if's,
]

lint.select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
]

include = ["*.py"]
exclude = ["alembic"]

[tool.ruff.lint.isort]
split-on-trailing-comma=true
combine-as-imports=true

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
implicit_reexport = true
warn_return_any = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.uv.sources]
vi-core = { git = "git+https://gitlab+deploy-token-2:gldt-FnyXszLXsATLZaHzmNa9@git.vashinvestor.ru/razvitie/microservices/vi-core.git" }
